# pyo3-sphinx-documentation

./: .gitignore  Makefile  README.md
.github/workflows/: CI.yml
docs/source/: conf.py  index.rst
extension/: Cargo.toml  pyproject.toml
extension/src/: lib.rs
scripts/: fake-deps.sh
